--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img id="user-image" src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" />
             </div>
             <div id="user-info">
-              <div id="user-name">John doe <span id="user-profile">(Architect)</span></div>
+              <div id="user-name">Rohit Gujar<span id="user-profile">(Software Engineer)</span></div>
             </div>
             <div id="skill-short">
               <span id="short-skill-span">Php</span>
