--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="col-sm-3">
         <div class="user-short-description">
             <div class="user-profile">
-                <img id="user-image" src="https://drive.google.com/file/d/1mz3mElf8h8Lc1YLAZ-2yjOlITDF_5R15/view?usp=drivesdk" />
+                <img id="user-image" src="images/rohit.jpg" />
             </div>
             <div id="user-info">
               <div id="user-name">Rohit Gujar<span id="user-profile">(Software Engineer)</span></div>
