--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="col-sm-3">
         <div class="user-short-description">
             <div class="user-profile">
-                <img id="user-image" src="images/portfolio.png" />
+                <img id="user-image" src="images/profile.png" />
             </div>
             <div id="user-info">
               <div id="user-name">Rohit Gujar<span id="user-profile">(Software Engineer)</span></div>
