--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>learning example</title>
+    <title>resume</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
       integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -56,23 +59,79 @@
     <div class="row justify-content-center mt-4">
       <div class="col-sm-3">
         <div class="user-short-description">
-            <div class="user-profile">
-                <img id="user-image" src="images/profile.png" />
+          <div class="user-profile">
+            <img
+              id="user-image"
+              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
+            />
+          </div>
+          <div id="user-info">
+            <div id="user-name">
+              Rohit Gujar<span id="user-profile"> (Software Engineer)</span>
             </div>
-            <div id="user-info">
-              <div id="user-name">Rohit Gujar<span id="user-profile">(Software Engineer)</span></div>
-            </div>
-            <div id="skill-short">
-              <span id="short-skill-span">Php</span>
-            </div>
-            <div id="contact_icon" class="text-align-center mt-3">
-              <a href="whatsapp://send?text=Hi Rohit&phone=:9926205619"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
-              <a href="tel:919926205619"><i class="fa-solid fa-phone fa-xl"></i></a>
-              <a href="https://in.linkedin.com/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-            </div>
+          </div>
+          <div id="skill-short">
+            <span id="short-skill-span">Php</span>
+          </div>
+          <div id="contact_icon" class="text-align-center mt-3">
+            <a href="whatsapp://send?text=Hi Rohit&phone=:9926205619"
+              ><i class="fa-brands fa-whatsapp fa-xl"></i
+            ></a>
+            <a href="tel:9926205619"><i class="fa-solid fa-phone fa-xl"></i></a>
+            <a href="https://in.linkedin.com/"
+              ><i class="fa-brands fa-linkedin fa-xl"></i
+            ></a>
+          </div>
         </div>
       </div>
-      <div class="col-sm-8"></div>
+      <div class="col-sm-8">
+        <div class="resume-long-description">
+          <div id="career-objective">
+            <div class="description-head">CAREER OBJECTIVE :-</div>
+            <div class="description-body">
+              Driven and seasoned software backend engineer with a proven track record in architecting and implementing scalable, high-performance systems. Leveraging 3 years of experience in web development, I am committed to optimizing backend operations, enhancing system efficiency, and driving innovation. Seeking a dynamic role where I can contribute my expertise to develop cutting-edge solutions, collaborate with talented teams, and continuously grow both professionally and personally.
+            </div>
+          </div>
+          <hr />
+          <div id="experience-show">
+            <div class="description-head">Experience :-</div>
+            <div class="description-body">
+              <ul>
+                <li>
+                  1.6 Year in Codiant a Yash Technology company indore
+                </li>
+                <li>2 Year in Techinfini solutions pvt ltd. indore</li>
+              </ul>
+            </div>
+          </div>
+          <hr />
+          <div id="training-description">
+            <div class="description-head">Training & Intership :-</div>
+            <div class="description-body">
+              <ul>
+                <li> 3 Month Intership From Kangaroo Software PVT LTD</li>
+              </ul>
+            </div>
+          </div>
+          <hr />
+          <div id="skill-div">
+            <div class="description-head">Technology :-</div>
+            <div class="description-body">
+              <ul>
+                <li>Php</li>
+                <li>Laravel</li>
+                <li>Node js</li>
+                <li>javascript</li>
+                <li>jquery</li>
+                <li>mysql</li>
+                <li>pgsql</li>
+                <li>git</li>
+                <li>docker</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="js/index.js"></script>
   </body>
