--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="user-profile">
             <img
               id="user-image"
-              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
+              src="images/profile.png"
             />
           </div>
           <div id="user-info">
