--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li>
                   1.6 Year in Codiant a Yash Technology company indore
                 </li>
-                <li>2 Year in Techinfini solutions pvt ltd. indore</li>
+                <li>2 Year in Techinfini solutions pvt LTD. indore</li>
               </ul>
             </div>
           </div>
@@ -121,6 +121,7 @@
                 <li>Php</li>
                 <li>Laravel</li>
                 <li>Node js</li>
+                 <li>Express js</li>
                 <li>javascript</li>
                 <li>jquery</li>
                 <li>mysql</li>
